# pyDiSCaMB-gpu

./: .gitmodules  CMakeLists.txt  pyproject.toml
conda/: dev_env.yml
